# aex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOS.md  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  fly-deploy.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
crates/aex-a2a-bridge/: Cargo.toml
crates/aex-a2a-bridge/src/: lib.rs
crates/aex-audit/: Cargo.toml
crates/aex-audit/src/: error.rs  event.rs  file_log.rs  lib.rs  memory_log.rs  rekor.rs
crates/aex-billing/: Cargo.toml
crates/aex-billing/src/: error.rs  lib.rs  memory.rs  stripe.rs
crates/aex-cli/: Cargo.toml
crates/aex-cli/src/: main.rs
crates/aex-conformance/: Cargo.toml
crates/aex-conformance/src/: lib.rs  main.rs
crates/aex-control-plane/: Cargo.toml  LICENSE.bsl  README.md
crates/aex-control-plane/migrations/: 20260420000001_agents.sql  20260420000002_transfers.sql  20260422000001_reachable_at.sql
crates/aex-control-plane/src/: blob.rs  config.rs  endpoint_validator.rs  error.rs  lib.rs  main.rs  signer.rs  stripe.rs
crates/aex-control-plane/src/db/: agents.rs  mod.rs  transfers.rs
crates/aex-control-plane/src/routes/: agent_card.rs  agents.rs  checkout.rs  health.rs  inbox.rs  mod.rs  transfers.rs
crates/aex-control-plane/src/routes/customer/: mod.rs  subscription.rs
crates/aex-control-plane/src/routes/v2/: capabilities.rs  intents.rs  mod.rs
crates/aex-control-plane/src/routes/webhooks/: stripe.rs
crates/aex-control-plane/tests/: agents_registration.rs  customer_subscription_checkout.rs  stripe_webhook.rs  transfers_flow.rs
crates/aex-control-plane/tests/common/: mod.rs
crates/aex-core/: Cargo.toml
crates/aex-core/src/: capability.rs  endpoint.rs  error.rs  identity.rs  lib.rs  signature.rs  types.rs  wire.rs  wire_v2.rs
crates/aex-core/tests/: proptests_v2.rs
crates/aex-data-plane/: Cargo.toml
crates/aex-data-plane/src/: main.rs  server.rs  ticket.rs
crates/aex-data-plane/tests/: end_to_end.rs
crates/aex-identity/: Cargo.toml
crates/aex-identity/src/: did_key.rs  did_web.rs  etere_citizen.rs  lib.rs  native.rs  resolver_chain.rs
crates/aex-jws/: Cargo.toml
crates/aex-jws/src/: lib.rs
crates/aex-net/: Cargo.toml
crates/aex-net/src/: lib.rs  safe_http.rs
crates/aex-policy/: Cargo.toml
crates/aex-policy/src/: decision.rs  lib.rs  request.rs  tier.rs
crates/aex-policy/src/sink/: in_process.rs  mod.rs  webhook.rs
crates/aex-scanner/: Cargo.toml
crates/aex-scanner/src/: eicar.rs  injection.rs  lib.rs  magic.rs  pipeline.rs  size.rs  verdict.rs
crates/aex-tunnel/: Cargo.toml
crates/aex-tunnel/src/: cloudflare.rs  cloudflare_named.rs  error.rs  iroh.rs  lib.rs  provider.rs  stub.rs  tailscale.rs  url_parser.rs
crates/aex-tunnel/tests/: cloudflared_integration.rs  iroh_integration.rs
deploy/: docker-compose.dev.yml
deploy/fly/: Dockerfile  fly.toml
docs/: architecture.md  protocol-v2.md
docs/decisions/: 0015-iroh-pinned-with-fallback.md  0018-wire-v1-frozen-capability-bits-v2-phase-6.md  0038-recipient-side-fallback-needs-multi-url-ticket.md  0039-iroh-bump-to-0.98.2.md  0040-etere-citizen-trust-scoring-first-class.md  0041-agent-id-w3c-did-uri.md  0042-wire-v2-brand-neutral-prefix.md  0043-capability-negotiation-dual-wire.md  0044-clock-skew-60s-rfc-7519.md  0045-aex-net-safe-http-ssrf.md  0046-card-cache-1h-etag-events.md  0047-v2-providers-spize-web-ethr-key.md  0048-conformance-suite-apache-2.md  0049-deferred-decisions-neutral-standard.md  README.md
docs/runbooks/: checkout-disabled.md
scripts/: setup-dev.sh
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: layout.tsx  not-found.tsx  page.tsx
web/src/app/api/status/[token]/: route.ts
web/src/app/api/waitlist/: route.ts
web/src/app/d/[token]/: download-client.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/waitlist/: page.tsx
web/src/lib/: supabase.ts
