[package]
name = "aex-conformance"
description = "Open-licence conformance test suite for AEX v2 — pass/fail report against a target deployment (ADR-0048)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
keywords = ["aex", "conformance", "test"]
categories = ["development-tools::testing"]

[[bin]]
name = "aex-conformance"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
aex-core = { path = "../aex-core", version = "=1.3.0-beta.4" }
aex-identity = { path = "../aex-identity", version = "=1.3.0-beta.4" }
aex-jws = { path = "../aex-jws", version = "=1.3.0-beta.4" }
aex-net = { path = "../aex-net", version = "=1.3.0-beta.4" }

base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
