[package]
name = "aex-identity"
description = "Identity providers for Agent Exchange Protocol (AEX): SpizeNative (Ed25519), EtereCitizen (did:ethr), did:web."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aex-core = { path = "../aex-core", version = "=1.3.0-beta.4" }
aex-jws = { path = "../aex-jws", version = "=1.3.0-beta.4" }
aex-net = { path = "../aex-net", version = "=1.3.0-beta.4" }

async-trait.workspace = true
base64.workspace = true
bs58 = "0.5"
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
k256 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }
