[package]
name = "aex-tunnel"
description = "Tunnel abstraction for the Spize data plane: trait + Cloudflare quick-tunnel + test stub."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
